cluster/unused/logging/elasticsearch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app.kubernetes.io/name: elasticsearch
spec:
  selector:
    app.kubernetes.io/name: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
      protocol: TCP
      name: elasticsearch
    - port: 9300
      targetPort: 9300
      protocol: TCP
      name: cluster
  type: LoadBalancer
  loadBalancerIP: 10.1.0.11
